# PointSignatureaAlgorithm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cleanCloud.hpp  meanDistance.cpp  optimizedPS.hpp
example/: OPS.cpp
examples/: CMakeLists.txt
examples/pointSignature/: CMakeLists.txt
examples/pointSignature/src/: main.cpp
examples/pointSignature/test/: cone.xyz  plane.xyz  sphere.xyz
include/pointSignatureAlgorithm/: CleanCloud.hpp  CleanCloud.hpp.bak  OptimizedPS.hpp  cleanCloud.hpp  meanDistance.hpp  optimizedPS.hpp
src/: CleanCloud.cpp  CleanCloud.cpp.bak  OptimizedPS.cpp  cleanCloud.cpp  optimizedPS.cpp
